# BudgetChain

./: .gitignore  Cargo.toml
Frontend/app/: layout.js  page.js
Frontend/app/centralGov/: page.tsx
Frontend/app/dashboard/: page.jsx
Frontend/app/login/: page.jsx
Frontend/app/register/: page.jsx
Frontend/app/transactions/: page.jsx
Frontend/app/validators/: page.jsx
Frontend/app/wallet/: page.jsx
Frontend/app/walletTransaction/: page.tsx
Frontend/components/: new-transaction-modal.jsx  validator-application-modal.jsx
Frontend/components/ui/: skeleton.jsx
Frontend/context/: UserContext.js
Frontend/lib/: api.js
src/: block.rs  blockchain.rs  main.rs  transaction.rs  validators.rs  wallet.rs
