[package]
name = "MyBlockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.5", features = ["cors"] }